[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sprites/static/ui/ui_dialog.png" type="Texture" id=1]
[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/ui/confirm_dialog.gd" type="Script" id=3]

[node name="ConfirmDialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -200.0
margin_right = 360.0
margin_bottom = 200.0
texture = ExtResource( 1 )
patch_margin_left = 42
patch_margin_top = 50
patch_margin_right = 42
patch_margin_bottom = 46

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = 54.0
margin_right = -48.0
margin_bottom = -54.0

[node name="Message" type="RichTextLabel" parent="NinePatchRect/VBoxContainer"]
margin_right = 624.0
margin_bottom = 49.0
text = "Confirm Message"
fit_content_height = true

[node name="Spacing" type="Control" parent="NinePatchRect/VBoxContainer"]
margin_top = 53.0
margin_right = 624.0
margin_bottom = 208.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 212.0
margin_right = 624.0
margin_bottom = 292.0

[node name="SpacingBefore" type="Control" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_right = 56.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="OKButton" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 280.0
margin_bottom = 80.0
rect_min_size = Vector2( 220, 80 )
text = "OK"

[node name="SpacingCenter" type="Control" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 284.0
margin_right = 340.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="CancelButton" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 344.0
margin_right = 564.0
margin_bottom = 80.0
rect_min_size = Vector2( 220, 80 )
text = "Cancel"

[node name="SpacingAfter" type="Control" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 568.0
margin_right = 624.0
margin_bottom = 80.0
size_flags_horizontal = 3

[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer/OKButton" to="." method="_on_OKButton_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
